# english-tokenizer

./: CHANGELOG.md  Cargo.toml  README.md
src/: contractions.rs  emoji.rs  lib.rs  patterns.rs
tests/: add_regex.rs  contractions_table.rs  define_config.rs  edge_cases.rs  fingerprint.rs  ordinal_long_teen.rs  parity_edges.rs  stateful_sequence.rs  url.rs
tests/common/: mod.rs
tests/data/: golden_cases.json
